# movies-streamlit

./: README.md  app.py  pyproject.toml
